--- a/description/mediacenter.html
+++ b/description/mediacenter.html
@@ -26,7 +26,7 @@
                     </div>
                     <div>
                         <ul>
-                            <li><a href="../description/index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="../description/about.html">About</a></li>
                             <li><a href="../description/mediacenter.html" style="color: #004cc7;">Mediacenter</a></li>
                             <li><a href="../description/contact.html" >Contacts</a></li>
@@ -35,7 +35,7 @@
                     <div>
                         <ul>
                             <li class="underline underline-offset-1">En</li>
-                            <li>Cabinet</li>
+                            <li><a href="../dashboard/dashboard.html">Cabinet</a></li>
                         </ul>
                     </div>
                 </div>
