--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -4728,7 +4728,7 @@
 
                     <!-- personal marketing  -->
                     <div id="person" class="mt-8">
-                        <div class="flex flex-col xl:flex-row justify-between">
+                        <div class="flex flex-col lg:flex-row justify-between">
                             <div class="tleft">
                                 <h1 class="mb-6">PARTNERSHIP DYNAMICS</h1>
                                 <div class="bonus flex">
@@ -4759,7 +4759,7 @@
                             </div>
                         </div>
 
-                        <div class="flex flex-col xl:flex-row justify-between mt-8">
+                        <div class="flex flex-col lg:flex-row justify-between mt-8">
                             <div class="tleft">
                                 <h1 class="flex">TEAM REVENUE BONUSES <span><i data-feather="alert-circle" class="w-5 pl-1" color=""></i></span></h1>
                                 <div class="bonus flex mt-6">
