--- a/description/about.html
+++ b/description/about.html
@@ -25,7 +25,7 @@
                     </div>
                     <div>
                         <ul>
-                            <li><a href="../description/index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="../description/about.html" style="color: #004cc7;">About</a></li>
                             <li><a href="../description/mediacenter.html">Mediacenter</a></li>
                             <li><a href="../description/contact.html">Contacts</a></li>
@@ -34,7 +34,7 @@
                     <div>
                         <ul>
                             <li class="underline underline-offset-1">En</li>
-                            <li>Cabinet</li>
+                            <li><a href="../dashboard/dashboard.html">Cabinet</a></li>
                         </ul>
                     </div>
                 </div>
