--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -80,7 +80,7 @@
 
                     </div>
 
-                    <div class="pack2 block">
+                    <div class="pack2 block hidden">
                        <div class="mpack">
                         <div class="p2-cir">
                             <p>M</p>
